--- a/.htaccess
+++ b/.htaccess
@@ -15,3 +15,7 @@ RewriteRule ^/?$ index.php?page=index [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^/]+)/?$ index.php?pagina=$1%{QUERY_STRING} [L]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^([^/]+)/([^/]+)/?$ index.php?pagina=$1&name=$2%{QUERY_STRING} [L]
