--- a/.htaccess
+++ b/.htaccess
@@ -1,21 +1,7 @@
 Options +FollowSymLinks
 
-RewriteBase /
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule ^(.*)$ $1.html
-
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^(.*)$ $1.php
-
-RewriteRule ^/?$ index.php?page=index [L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^/]+)/?$ index.php?pagina=$1%{QUERY_STRING} [L]
-
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^/]+)/([^/]+)/?$ index.php?pagina=$1&name=$2%{QUERY_STRING} [L]
+RewriteRule ^([^/]+)/?$ index.php?name=$1%{QUERY_STRING} [L]
