--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,5 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^/]+)/?$ index.php?name=$1%{QUERY_STRING} [L]
+
+ErrorDocument 404 /400.html
