--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,6 @@ RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^/]+)/?$ index.php?name=$1%{QUERY_STRING} [L]
+RewriteRule ^([^/]+)/?$ index.php?name=$1&%{QUERY_STRING} [L]
 
 ErrorDocument 404 /400.html
