--- a/.htaccess
+++ b/.htaccess
@@ -6,4 +6,8 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([^/]+)/?$ index.php?name=$1&%{QUERY_STRING} [L]
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^([^/]+)/([^/]+)/?$ index.php?name=$1&ab=$2&%{QUERY_STRING} [L]
+
 ErrorDocument 404 /400.html
